# csa_mdp_experiments

./: CMakeLists.txt  README.md  evaluate_policies.sh  evaluate_policies_bb.sh  evaluate_policies_controller.sh  learn_policies.sh  package.xml  run_control.sh
configs/: BlackBoxLearner.xml  PolicyMutationLearner.xml  mass_bb.sh  mass_eval.sh  mass_lm.sh  mass_runner.sh  random_cart_pole
configs/approach/: evaluation_config.xml  expert_approach.xml  mre_experiment_with_seed.xml  policy_learner.xml
configs/cart_pole/: Config.xml  LearningMachine_MRE.xml  PolicyConfig.xml  TestConfig.xml  evaluation_config.xml  exploration_mre_experiment.xml  mre_experiment.xml  policy_learner.xml  random_mre_experiment.xml
configs/cart_pole_stabilization/: Config.xml  LearningMachine_MBL.xml  PolicyConfig.xml  TestConfig.xml  evaluation_config.xml  learning_machine.xml  mre_experiment.xml  mre_experiment_classic.xml  mre_experiment_gp.xml  policy_learner.xml
configs/examples/: black_box_learner.json  bootstrapped_pml2.json  bootstrapped_pml2_relative.json  fa_policy_evaluator.json  fa_policy_tester.json  policy_evaluator.json  relative_paths.json
configs/experimental/: lppi.json  ssl_dynamic_lppi.json  ssl_lppi.json  ssl_policy_evaluator.json  ssl_policy_tree_evaluator.json
configs/kick_controler/: BlackBoxLearner.xml  KickModelCollection.xml  LearningMachine_EVAL.xml
configs/learners/: fake_learner.json
configs/misc/: KickModelCollection.xml
configs/multi_kick_single_player/: BlackBoxLearner.xml  LearningMachine_eval.xml
configs/one_player_kick/: LearningMachine.xml  LearningMachine_EA.xml  LearningMachine_EVAL.xml
configs/optimizers/: cmaes.json  composite_optimizer.json  cross_entropy.json  simulated_annealing.json
configs/polar_approach/: BlackBoxLearner.xml  LearningMachine_EVAL.xml  LearningMachine_ExpertApproach.xml  LearningMachine_MBL.xml  LearningMachine_MBL_classic.xml  LearningMachine_MBL_lateral.xml  LearningMachine_MBL_odometry.xml  LearningMachine_MBL_smooth.xml  LearningMachine_MRE.xml  LearningMachine_seed.xml  LearningMachine_seed_classic.xml  LearningMachine_seed_lateral.xml  LearningMachine_seed_odometry.xml  LearningMachine_seed_smooth.xml  expert_approach.xml  mre_experiment_with_seed.xml  mre_experiment_with_seed_classic.xml  mre_experiment_with_seed_gp.xml  seed_generator.xml
configs/policies/: expert_approach_polar.json  ssl_expert_approach_polar.json
configs/problems/: ball_approach.json  cart_pole_stabilization.json  cart_pole_stabilization.xml  polar_approach.xml  simulated_cart_pole.json  ssl_ball_approach.json  ssl_dynamic_ball_approach.json
configs/simulated_cart_pole/: LearningMachine_EVAL.xml  LearningMachine_MBL.xml  LearningMachine_MBL_quick.xml  LearningMachine_MRE.xml  mre_experiment.xml  mre_experiment_angular.xml  mre_experiment_cart.xml  mre_experiment_gp.xml
configs/soccer/: odometry.json
configs/solvers/: PML.xml
include/interface/: interface.h
include/kick_model/: classic_kick.h  custom_power_kick.h  directed_kick.h  directed_kick.hp  final_kick.h  full_power_kick.h  grass_model.h  kick_decision_model.h  kick_decision_model_factory.h  kick_model.h  kick_model_collection.h  kick_model_factory.h  kick_zone.h  rolling_ball_model.h
include/learning_machine/: learning_machine.h  learning_machine_blackbox.h  learning_machine_controller.h  learning_machine_factory.h
include/mre_machine/: mre_machine.h  mre_machine_blackbox.cpp  mre_machine_blackbox.h  mre_machine_controller.h  mre_machine_factory.h
include/odometry/: odometry.h  odometry_displacement_model.h  odometry_noise_model.h
include/policies/: expert_approach.h  mixed_approach.h  ok_seed.h  opk_expert_approach.h  opportunist_approach.h
include/problems/: approach.h  ball_approach.h  blackbox_problem.h  cart_pole.h  cart_pole_stabilization.h  control_problem.h  double_integrator.h  double_inverted_pendulum.h  extended_problem_factory.h  inverted_pendulum.h  inverted_pendulum_stabilization.h  kick_controler.h  kick_optimizer.h  multi_kick_single_player.h  one_player_kick.h  polar_approach.h  problem_factory.h  simulated_cart_pole.h  ssl_ball_approach.h  ssl_dynamic_ball_approach.h
src/: black_box_learning.cpp  blackbox_value_estimator.cpp  cp_random_controller.cpp  evaluate_double_integrator.cpp  extract_fa_tree.cpp  forests_bb_evaluator.cpp  forests_controller.cpp  ip_forest_controller.cpp  ip_listener.cpp  ip_mre.cpp  ip_random_controller.cpp  learn_double_integrator.cpp  learn_from_log.cpp  learn_from_logs.cpp  learn_ip_from_log.cpp  learn_ip_from_samples.cpp  learning_machine.cpp  mre_blackbox.cpp  mre_controller.cpp  mre_double_integrator.cpp  mre_experiment.cpp  random_bb.cpp  random_controller.cpp  robot_kick_comparator.cpp  tmp_model_based.cpp
src/interface/: interface.cpp  sources.cmake
src/kick_model/: classic_kick.cpp  custom_power_kick.cpp  directed_kick.cpp  final_kick.cpp  full_power_kick.cpp  grass_model.cpp  kick_decision_model.cpp  kick_decision_model_factory.cpp  kick_model.cpp  kick_model_collection.cpp  kick_model_factory.cpp  kick_zone.cpp  rolling_ball_model.cpp  sources.cmake
src/learning_machine/: learning_machine.cpp  learning_machine_blackbox.cpp  learning_machine_controller.cpp  learning_machine_factory.cpp  sources.cmake
src/mre_machine/: mre_machine.cpp  mre_machine_blackbox.cpp  mre_machine_controller.cpp  mre_machine_factory.cpp  sources.cmake
src/odometry/: odometry.cpp  odometry_displacement_model.cpp  odometry_noise_model.cpp  sources.cmake
src/policies/: expert_approach.cpp  mixed_approach.cpp  ok_seed.cpp  opk_expert_approach.cpp  opportunist_approach.cpp  sources.cmake
src/problems/: approach.cpp  ball_approach.cpp  cart_pole.cpp  cart_pole_stabilization.cpp  double_integrator.cpp  double_inverted_pendulum.cpp  extended_problem_factory.cpp  inverted_pendulum.cpp  kick_controler.cpp  kick_optimizer.cpp  multi_kick_single_player.cpp  one_player_kick.cpp  polar_approach.cpp  problem_factory.cpp  simulated_cart_pole.cpp  sources.cmake  ssl_ball_approach.cpp  ssl_dynamic_ball_approach.cpp
