<?xml version="1.0"?>
<package>
  <name>csa_mdp_experiments</name>
  <version>0.0.0</version>
  <description>Package containing experiments on:
  Continuous State and Action Markov Decision Process</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>

  <license>DWTFYW</license>

  <author email="medrimonia@gmail.com">medrimonia</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosban_control</build_depend> <!-- optional git@bitbucket.org:rhoban/rosban_control.git -->
  <build_depend>rosban_csa_mdp</build_depend> <!-- git@bitbucket.org:rhoban/rosban_csa_mdp.git -->
  <build_depend>model</build_depend> <!-- git@bitbucket.org:rhobanproject/model.git -->

  <run_depend>rosban_control</run_depend>
  <run_depend>rosban_csa_mdp</run_depend>
  <run_depend>model</run_depend>

</package>
