<?xml version="1.0"?>
<package>
  <name>csa_mdp_experiments</name>
  <version>0.0.0</version>
  <description>Package containing experiments on:
  Continuous State and Action Markov Decision Process</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>

  <license>DWTFYW</license>

  <author email="medrimonia@gmail.com">medrimonia</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>starkit_csa_mdp</build_depend> <!-- StarkitRobots/csa_mdp.git -->

  <run_depend>starkit_csa_mdp</run_depend>

</package>
